[gd_scene load_steps=4 format=2]

[ext_resource path="res://enemy/enemyRed5.png" type="Texture" id=1]
[ext_resource path="res://enemy/Enemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 47.0952

[node name="Enemy" type="KinematicBody2D" groups=[
"enemies",
]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="LeftGun" type="Position2D" parent="."]
position = Vector2( -33.2035, -17.1288 )

[node name="RightGun" type="Position2D" parent="."]
position = Vector2( 33.204, -17.129 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
